# Archon

./: .gitignore  LICENSE  Makefile  PRIVACY_POLICY.md  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/agents/: claude-code-toolsmith.md  cli-ux-master.md  dashboard-architect.md  database-expert.md  database-expert.yml  design-system.md  design-system.yml  html-stylist.md  html-stylist.yml  marketing-strategist.md  marketing-strategist.yml  ml-engineer.md  ml-engineer.yml  monetization-expert.md  monetization-expert.yml  node-architect.md  node-architect.yml  product-thinker.md  product-thinker.yml  prompt-craftsman.md  python-architect.md  python-architect.yml  react-crafter.md  react-crafter.yml  swift-architect.md  swift-architect.yml  swiftdata-expert.md  swiftdata-expert.yml  swiftui-crafter.md  swiftui-crafter.yml  tech-writer.md  tech-writer.yml  test-genius.md  testing-genius.yml  web-ui-designer.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_AND_SECURITY.md  AUTH_GUIDE.md  CODEX_SPECIALIST_TEAM.md  DEEPSEEK_INTEGRATION.md  DESIGN_DECISIONS.md  DESIGN_SYSTEM.md  GETTING_STARTED.md  MEMORY_ARCHITECTURE.md  PRD.md  REVOLUTIONARY_IDEAS.md  SETUP.md  USER_PERSONAS.md  ZEROBOT_NANOBOT_CLAWDBOT_OPENCLAW_ASSESSMENT.md  architecture-overview.md  diagrams.md
orchestrator/: __init__.py  __main__.py  api_client.py  cli_display.py  config.py  contract_manager.py  dashboard.py  live_api.py  logger.py  manager_chat.py  manager_intelligence.py  message_bus.py  orchestrator.py  planner.py  report_manager.py  session.py  sync_manager.py  task_queue.py  terminal.py  validator.py
orchestrator/auth/: __init__.py  config.py  database.py  error_handlers.py  middleware.py  models.py  passwords.py  routes.py  tokens.py
orchestrator/static/: admin.html  index.html
orchestrator/static/js/: dashboard-interactions.js  websocket-integration.js
scripts/: quality_gates.py  run_tests.py
templates/contracts/: api.md  component.md  data_model.md  interface.md
templates/terminal_prompts/: t1_uiux.md  t2_features.md  t3_docs.md  t4_ideas.md  t5_qa.md
templates/terminal_prompts_compact/: t1_uiux.md  t2_features.md  t3_docs.md  t4_ideas.md  t5_qa.md
tests/: __init__.py  conftest.py  test_auth.py  test_auth_integration.py  test_cli_display.py  test_codex_runtime.py  test_contracts.py  test_dashboard_api.py  test_interventions.py  test_live_api.py  test_logger.py  test_message_bus.py  test_organic_flow.py  test_planner.py  test_quality_gradient.py  test_report_manager.py  test_security.py  test_sync_manager.py  test_task_queue_organic.py  test_terminal.py  test_terminal_personalities.py  test_validator.py
